--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "standard",
+    "start": "node index.js",
     "deploy": "git add . && git commit -m Build && git push"
   },
   "engines": {
